Updated ../../.. - Version 1.43.0012 (dev)

  Fixed Windows 98/ME font selection.  With Unicode for Windows, Qt was
  getting horribly confused by the standard font 'Trebuchet MS'.

  Remember the 'amount' when switching from type to type, such as when
  the user changes 5 str to 5 dex.

  Very experimental 'effects' added, for craftable items allows choice
  of one Alchemy Tincture to apply, for drop items allows to choose the
  various offensive/reactive/charged or other (such as cast) effects.

  Very experimental 'other...' bonus or effect added, allowing choice
  of an unusual (user named) bonus or effect.

  Add 'Elf' to 'Blademaster' classes choice of races.

  Behave nicely if the source user doesn't choose to install psyco.

Updated 11/28/05 - Version 1.43.0011 (dev)

  Moved 'Distance To Cap' to the Options window, save user's preference.

  Remember the preference for Options - Include Done in Material list,
  and Options - Coop/PvP server items check boxes.

  Fixed the materials/costs of the Catacombs Brilliant and Finesse gems.
  Fix materials window, when clicking a gem name, so the multiplier works.

  Axed the 'Focus' list.  All Focuses are now listed under the Skills list.

  Fixed the config report for 'All Spell Lines Focus' to show all focuses
  (was dropping the first focus for the class.)

  The [...] button for an item's level is a bit more useful & informative.

  Cloth armor (any item with the same DPSAF as it's level) will be
  reduced one level for computation of available imbue points.

  Fixed the materials 'save as text' button, broken since the new Qt 3.4.

  Fixed the 'delve', when clicking on stats, to pull up stat caps,
  and when clicking on this toon's casting stat it also pulls up all 
  of the 'Acuity' stat and cap bonuses; when clicking any power bonus
  pull up all related power, % power pool and power cap bonuses; and
  includes Skill and Focus bonuses when delving either on a caster.
